# GPT-SoVITS-Streaming

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt  train.txt
GPT_SoVITS/: download.py  process_ckpt.py  sv.py
GPT_SoVITS/AR/models/: t2s_lightning_module.py  t2s_model.py
GPT_SoVITS/TTS_infer_pack/: TTS.py  TextPreprocessor.py  text_segmentation_method.py  zero_crossing.py
GPT_SoVITS/configs/: tts_infer.yaml
GPT_SoVITS/eres2net/: ERes2NetV2.py
GPT_SoVITS/f5_tts/model/backbones/: dit.py
GPT_SoVITS/feature_extractor/: cnhubert.py
GPT_SoVITS/module/: core_vq.py  models.py  modules.py
GPT_SoVITS/text/: cantonese.py  chinese.py  chinese2.py  cleaner.py
GPT_SoVITS/tools/: my_utils.py
examples/: run.py  stream.py
