[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GPT_SoVITS"
dynamic = ["version"]
description = "A GPT_SoVITS package with streaming support."
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "audioread==3.0.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cn2an==0.5.23",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "Distance==0.1.3",
    "einops==0.8.0",
    "fastapi==0.115.8",
    "ffmpeg-python==0.2.0",
    "ffmpy==0.5.0",
    "filelock==3.17.0",
    "fonttools==4.55.8",
    "frozenlist==1.5.0",
    "fsspec==2025.2.0",
    "future==1.0.0",
    "g2p-en==2.1.0",
    "gradio==5.14.0",
    "gradio_client==1.7.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "inflect==7.5.0",
    "jieba_fast==0.53",
    "Jinja2==3.1.5",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "LangSegment==0.3.5",
    "lazy_loader==0.4",
    "librosa==0.10.2.post1",
    "lightning-utilities==0.12.0",
    "llvmlite==0.44.0",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numba==0.61.0",
    "numpy==1.26.4",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "proces==0.1.7",
    "propcache==0.2.1",
    "py3langid==0.3.0",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pydub==0.25.1",
    "Pygments==2.19.1",
    "pyparsing==3.2.1",
    "pypinyin==0.53.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytorch-lightning==2.5.0.post0",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "ruff==0.9.4",
    "safehttpx==0.1.6",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "semantic-version==2.10.0",
    "setuptools==75.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sounddevice==0.5.1",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "starlette==0.45.3",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "tomlkit==0.13.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchmetrics==1.6.1",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.48.2",
    "typeguard==4.4.1",
    "typer==0.15.1",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "websockets==14.2",
    "wordsegment==1.3.1",
    "yarl==1.18.3",
]

[project.urls]
Homepage = "https://github.com/spava002/GPT-SoVITS-Streaming"

[project.scripts]
"gpt_sovits_api" = "GPT_SoVITS.api_v2:main"

[tool.setuptools.packages.find]
include = ["GPT_SoVITS"]